# lotis

./: README.md
lotis/: .cproject  .project  README.md  sdkconfig
lotis/components/i2c_helper/: .cproject  .project  CMakeLists.txt  i2c_helper.c
lotis/components/liquid_crystal_i2c/: .cproject  .project  CMakeLists.txt  liquid_crystal_i2c.c
lotis/components/rtc_ds323/: .cproject  .project  CMakeLists.txt  rtc_ds323.c
lotis/components/sd_card/: .cproject  CMakeLists.txt  sd_card.c
lotis/components/sim900/: .cproject  .project  CMakeLists.txt  sim900.c
lotis/main/: CMakeLists.txt  main.c
lotis/main/include/: ble_protocol.h  common.h  gatt_svc.h  keypad.h
lotis/main/src/: ble_protocol.c  gap.c  gatt_svc.c
lotis_manager_app/: .flutter-plugins-dependencies  .gitignore  LICENSE  README.md  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml
lotis_manager_app/android/app/: build.gradle.kts
lotis_manager_app/ios/Runner/: Info.plist
lotis_manager_app/ios/Runner.xcodeproj/: project.pbxproj
lotis_manager_app/lib/: app_instance.dart  main.dart
lotis_manager_app/lib/components/: ble_connection_dialog.dart  egg_harvest_confirmation_dialog.dart  menu_button.dart  primary_snackbar.dart  switch_button_card.dart
lotis_manager_app/lib/constants/: app_color.dart  app_font.dart  app_image.dart  app_svg.dart  app_utils.dart
lotis_manager_app/lib/data/: egg.dart  (+3 more)
lotis_manager_app/linux/: CMakeLists.txt
lotis_manager_app/test/: widget_test.dart
lotis_manager_app/web/: index.html  manifest.json
lotis_manager_app/windows/: CMakeLists.txt
(+33 files in other folders)
